feat: project scaffolding

--- a/index.html
+++ b/index.html
@@ -9,6 +9,41 @@
     <title>Simple calculator</title>
 </head>
 <body>
+    <!-- container -->
+    <div class="container">
+        <!-- header -->
+        <header>
+
+        </header>
+        <!-- /header -->
+
+        <!-- display -->
+        <div class="display">
+
+        </div>
+        <!-- /display -->
+
+
+        <!-- main-calc -->
+        <div class="main-calc">
+
+            <!-- calc-sx -->
+            <div class="calc-sx">
+
+            </div>
+            <!-- /calc-sx -->
+
+            <!-- /calc-dx -->
+            <div class="calc-dx">
+
+            </div>
+            <!-- /calc-dx -->
+
+        </div>
+        <!-- /main-calc -->
+
+    </div>
+    <!-- //container -->
     
 </body>
 </html>
