feat: header and display complete

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 <body>
     <!-- container -->
-    <div class="container">
+    <div class="calc container">
         <!-- header -->
-        <header>
-
+        <header class="header-logo center">
+            <img src="./img/boosio-logo.png" alt="">
         </header>
         <!-- /header -->
 
         <!-- display -->
         <div class="display">
-
+            <span class="text-display">0</span>
         </div>
         <!-- /display -->
 
