--- a/index.html
+++ b/index.html
@@ -29,13 +29,28 @@
 
             <!-- calc-sx -->
             <div class="calc-sx">
+                <button class="btn">7</button>
+                <button class="btn">8</button>
+                <button class="btn">9</button>
+                <button class="btn">4</button>
+                <button class="btn">5</button>
+                <button class="btn">6</button>
+                <button class="btn">1</button>
+                <button class="btn">2</button>
+                <button class="btn">3</button>
+                <button class="btn zero">0</button>
+                <button class="btn result">&equals;</button>
 
             </div>
             <!-- /calc-sx -->
 
             <!-- /calc-dx -->
             <div class="calc-dx">
-
+                <button class="btn-dx canc">C</button>
+                <button class="btn-dx">&#10009;</button>
+                <button class="btn-dx">&#9866;</button>
+                <button class="btn-dx">&#9747;</button>
+                <button class="btn-dx">&divide;</button>
             </div>
             <!-- /calc-dx -->
 
