feat: complete calc

--- a/index.html
+++ b/index.html
@@ -29,28 +29,28 @@
 
             <!-- calc-sx -->
             <div class="calc-sx">
-                <button class="btn">7</button>
-                <button class="btn">8</button>
-                <button class="btn">9</button>
-                <button class="btn">4</button>
-                <button class="btn">5</button>
-                <button class="btn">6</button>
-                <button class="btn">1</button>
-                <button class="btn">2</button>
-                <button class="btn">3</button>
-                <button class="btn zero">0</button>
-                <button class="btn result">&equals;</button>
+                <button class="btn number">7</button>
+                <button class="btn number">8</button>
+                <button class="btn number">9</button>
+                <button class="btn number">4</button>
+                <button class="btn number">5</button>
+                <button class="btn number">6</button>
+                <button class="btn number">1</button>
+                <button class="btn number">2</button>
+                <button class="btn number">3</button>
+                <button class="btn number zero">0</button>
+                <button class="btn orange result">&equals;</button>
 
             </div>
             <!-- /calc-sx -->
 
             <!-- /calc-dx -->
             <div class="calc-dx">
-                <button class="btn-dx canc">C</button>
-                <button class="btn-dx">&#10009;</button>
-                <button class="btn-dx">&#9866;</button>
-                <button class="btn-dx">&#9747;</button>
-                <button class="btn-dx">&divide;</button>
+                <button class="btn-dx orange canc">C</button>
+                <button class="btn-dx operations">&plus;</button>
+                <button class="btn-dx operations">&minus;</button>
+                <button class="btn-dx operations">&times;</button>
+                <button class="btn-dx operations">&divide;</button>
             </div>
             <!-- /calc-dx -->
 
